--- a/about.html
+++ b/about.html
@@ -45,35 +45,25 @@ header-img: "img/about-bg.jpg"
 
 
 
-{% if site.duoshuo_username %}
-<!-- 多说评论框 start -->
-<div class="comment">
-    <div class="ds-thread"
-         data-thread-key="{{site.duoshuo_username}}/about"
-         data-title="{{page.title}}"
-         data-url="{{site.url}}/about/"></div>
-</div>
-<!-- 多说评论框 end -->
+{% if site.gittalk_clientID %}
+<!-- gitalk 评论框 start -->
+<div id="gitalk-container"></div>
+<!-- gitalk 评论框 end -->
 
-<!-- Duoshuo hacking -->
-<input id="dsUser" type="hidden" value="{{site.duoshuo_username}}" />
-
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<!-- gitalk 公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
-    // dynamic User hacking by Hux
-    var _user = document.getElementById('dsUser').value;
-    // duoshuo comment query.
-    var duoshuoQuery = {short_name: _user };
-    (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0]
-         || document.getElementsByTagName('body')[0]).appendChild(ds);
-    })();
+    const gitalk = new Gitalk({
+        clientID: "{{site.gittalk_clientID}}",
+        clientSecret: "{{site.gittalk_clientSecret}}",
+        repo: 'wings27.github.io',
+        owner: 'wings27',
+        admin: ['wings27'],
+        id: location.pathname, // Ensure uniqueness and length less than 50
+        distractionFreeMode: false
+    });
+    gitalk.render('gitalk-container');
 </script>
-<!-- 多说公共JS代码 end -->
+<!-- gitalk 公共JS代码 end -->
 {% endif %}
 
 
