--- a/about.html
+++ b/about.html
@@ -67,6 +67,12 @@ header-img: "img/about-bg.jpg"
 {% endif %}
 
 
+
+{% if site.vssue_clientID %}
+<div id="vssue"></div>
+{% endif %}
+
+
 {% if site.disqus_username %}
 <!-- disqus 评论框 start -->
 <div class="comment">
