--- a/about.html
+++ b/about.html
@@ -13,19 +13,50 @@ header-img: "img/about-bg.jpg"
 
 <!-- Chinese Version -->
 <div class="zh">
-    <blockquote>
-
-    </blockquote>
-
+    <p>初中起入坑编程，14年毕业于天津大学计算机专业。</p>
+    <p>职业经历Bumps to Babes、美团点评等公司。</p>
+    <p>热爱编程与美食。</p>
+    <hr/>
+    <p>本博客构建于GitHub Pages. 使用下列自由or开源软件/商用解决方案：</p>
 </div>
 
 <!-- English Version -->
 <div class="en">
-    <blockquote>
-
-    </blockquote>
-
+    <h4>About me</h4>
+    <p>Hi, I'm Wings27.</p>
+    <p>I started to program since junior high school. </p>
+    <p>Graduated in Computer Science from Tianjin University in 2014.</p>
+    <p>Worked for Bumps to Babes, Meituan Dianping,.etc</p>
+    <p>Love coding and cooking.</p>
+    <hr/>
+    <p>This blog is based on GitHub Pages, thanks to the following free / open source software and commercial solutions:</p>
 </div>
+
+
+<!-- Both Version -->
+<ul>
+    <li>GitHub Pages</li>
+    <li>travis-ci</li>
+    <li>Jekyll</li>
+    <li>jekyll-paginate</li>
+    <li>markdown (kramdown)</li>
+    <li>Ruby</li>
+    <li>RubyGems</li>
+    <li>vultr</li>
+    <li>nginx</li>
+    <li>certbot</li>
+    <li>Let's Encrypt</li>
+    <li>godaddy</li>
+    <li>v2ray</li>
+    <li>Cloudflare</li>
+    <li>grunt</li>
+    <li>Node.js</li>
+    <li>npm</li>
+    <li>Vue.js</li>
+    <li>gitalk</li>
+    <li>vssue</li>
+    <li>staticman</li>
+</ul>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
